--- a/package.json
+++ b/package.json
@@ -1,18 +1,33 @@
 {
-  "name": "template",
-  "version": "0.0.0",
-  "private": true,
+  "name": "nodejs-hw-rest-api",
+  "version": "1.0.0",
+  "private": false,
   "scripts": {
     "start": "cross-env NODE_ENV=production node ./server.js",
     "start:dev": "cross-env NODE_ENV=development nodemon ./server.js",
     "lint": "eslint **/*.js",
-    "lint:fix": "eslint --fix **/*.js"
+    "lint:fix": "eslint --fix **/*.js",
+    "test": "jest",
+    "test:dev": "jest --watch"
   },
   "dependencies": {
+    "@sendgrid/mail": "^8.1.3",
+    "bcryptjs": "^2.4.3",
+    "colors": "^1.4.0",
     "cors": "2.8.5",
     "cross-env": "7.0.3",
-    "express": "4.17.1",
-    "morgan": "1.10.0"
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "gravatar": "^1.8.2",
+    "jimp": "^0.22.12",
+    "joi": "^17.13.1",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.4.0",
+    "morgan": "1.10.0",
+    "multer": "^1.4.5-lts.1",
+    "passport": "^0.7.0",
+    "passport-jwt": "^4.0.1",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "eslint": "7.19.0",
@@ -21,6 +36,10 @@
     "eslint-plugin-import": "2.25.3",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "5.2.0",
-    "nodemon": "2.0.15"
+    "jest": "^29.7.0",
+    "mockingoose": "^2.16.2",
+    "nodemon": "^3.1.0",
+    "passport-mock-strategy": "^2.0.0",
+    "supertest": "^7.0.0"
   }
 }
